<resources>
    <string name="app_name">Crunchyroll</string>
    <string name="acceder">Acceder</string>
    <string name="direccion_de_email_o_usuario">Direccion de email o usuario</string>
    <string name="contrase_a">Contraseña</string>
    <string name="has_olvidado_tu_contrase_a">¿HAS OLVIDADO TU CONTRASEÑA?</string>
    <string name="no_tienes_cuenta">¿No tienes cuenta?</string>
    <string name="crear_cuenta">Crear Cuenta</string>
    <string name="todo_tu_anime_favorito_todo_en_un_solo_n_lugar">Todo tu anime favorito.Todo en un solo \n lugar.</string>
    <string name="o">o</string>
    <string name="explorar_prueba_gratuita">Explorar prueba gratuita</string>
    <string name="email_o_nombre_de_usuario">Email o nombre de usuario</string>
    <string name="contraseña">Contraseña</string>
    <string name="TerminosYPoliticas">Al usar tu cuenta accedes a nuestros Términos y Políticas de Privacidad y confirmas que tienes 16 años o más.</string>
    <string name="Olvidado">¿Has olvidado la contraseña? </string>
    <string name="separacion">   |   </string>
    <string name="quiero_estar_al_dia_sobre_crunchyroll_ofertas_y_nnoticias">Quiero estar al dia sobre Crunchyroll,ofertas y \nnoticias</string>
    <string name="usando">Usando Crunchyroll accedes a nuestra Terminos y Politica de Privacidad, confimando ademas que tienes 16 años o mas</string>
    <string name="ya_tienes_una_cuenta_acceder">¿Ya tienes una cuenta? Acceder</string>
    <string name="crunchyroll_premium">Crunchyroll Premium</string>
    <string name="prueba_gratuita_de_14_dias">Prueba gratuita de 14 dias</string>
    <string name="Textaco">Tu suscripcion, la cual comenzara con un periodo de prueba gratuita si cumples los requisitos, comenzara cuando pinches sobre SUSCRIBIETE CON UNA PRUEBA GRATUITA. Si cumples los requisitos para una prueba gratuita, se te cargaran 4,99€ al mes mas los impuestos correspondientes cuando la prueba gratuita finalice; de lo contrario, el cargo se realizara de inmediato al da comienzo a la suscipcion.Tu suscripcion se renovara de foma automatica si no la cancelas via google play con al menos 24 horas de antelacion antes del final del periodo en curso.Al comprar una suscripcion accedes a nuestra Politica de privacidad y Terminos.</string>
    <string name="fan">FAN</string>
    <string name="_4_99_mes">4,99€/mes</string>
    <string name="sin_anuncios">Sin anuncios</string>
    <string name="acceso_ilimitado_al_catalogo_de_crunchyroll">Acceso ilimitado al catalogo de Crunchyroll</string>
    <string name="nuevos">Nuevos episodios una hora despues de Japon</string>
    <string name="uno">En un dispositivo a la vez</string>
    <string name="pelis">Episodios y peliculas para verlos sin conexion</string>
    <string name="mensual">16% de descuento en Plan Mensual\n(cargo anual)</string>
    <string name="sus">Suscribete con una prueba gratuita</string>
    <string name="mega_fan">MEGA FAN</string>
    <string name="mega_fan_anual">MEGA FAN ANUAL</string>
    <string name="_6_49_mes">6,49/mes</string>
    <string name="_64_99_a_o">64,99/año</string>
    <string name="inicio">Inicio</string>
    <string name="mis_listas">Mis listas</string>
    <string name="primero">Primero</string>
    <string name="explorar">Explorar</string>
    <string name="simulcast">Simulcast</string>
    <string name="cuenta">Cuenta</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="vinland_saga">VINLAND SAGA</string>
    <string name="sinapsis">Cuando Thors, un gran guerrero vikingo muere asesinado en batalla a manos de Askeladd, un mercenario,su hijo,Thorfinn,jura vengarse.</string>
    <string name="ver_ahora">Ver ahora</string>
    <string name="one_piece">One piece</string>
    <string name="hunter_x_hunter">Hunter x Hunter</string>
    <string name="naruto">Naruto</string>
    <string name="one_punch_man">One Punch Man</string>
    <string name="nuevas_recomendaciones">NUEVAS RECOMENDACIONES</string>
    <string name="kimetsu_no_yaiba">Kimetsu no Yaiba</string>
    <string name="shingeki_no_kyojin">Shingeki no Kyojin</string>
    <string name="black_clover">Black Clover</string>
    <string name="jujutsu_kaisen">Jujutsu Kaisen</string>
    <string name="similar">SIMILAR A LO QUE ESTAS VIENDO</string>
    <string name="actividad_reciente">Actividad Reciente</string>
    <string name="en_desarrollo">En Desarrollo</string>
    <string name="temporada_de_simulcast">Temporada de simulcast</string>

</resources>