<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".registrar">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/arriba"
        android:layout_width="412dp"
        android:layout_height="69dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.024">

        <TextView
            android:id="@+id/accede"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/crear_cuenta"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:fontFamily="@font/lato_bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/cruz2"
            android:layout_width="26dp"
            android:layout_height="24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/accede"
            app:layout_constraintHorizontal_bias="0.112"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.488"
            app:srcCompat="@drawable/cruz_balca" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="414dp"
        android:layout_height="403dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/arriba"
        app:layout_constraintVertical_bias="0.35">

        <ImageView
            android:id="@+id/logo2"
            android:layout_width="199dp"
            android:layout_height="62dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.055"
            app:srcCompat="@drawable/crunchyroll" />

        <EditText
            android:id="@+id/usuario"
            style="@style/EditText"
            android:layout_width="347dp"
            android:layout_height="57dp"
            android:ems="10"
            android:hint="@string/email_o_nombre_de_usuario"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.507"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logo2"
            app:layout_constraintVertical_bias="0.053" />

        <EditText
            android:id="@+id/passwords"
            style="@style/EditText"
            android:layout_width="347dp"
            android:layout_height="57dp"
            android:ems="10"
            android:hint="@string/contraseña"
            android:inputType="textPassword"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.507"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/usuario"
            app:layout_constraintVertical_bias="0.031" />

        <TextView
            android:id="@+id/terminosYCondiciones"
            style="@style/TextView"
            android:layout_width="327dp"
            android:layout_height="36dp"
            android:gravity="center"
            android:text="@string/usando"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.505"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passwords"
            app:layout_constraintVertical_bias="0.414" />

        <Button
            android:id="@+id/acceder"
            android:layout_width="330dp"
            android:layout_height="48dp"
            android:background="@color/Transparente"
            android:enabled="false"
            android:fontFamily="@font/lato_bold"
            android:foreground="@drawable/acceder"
            android:text="@string/crear_cuenta"
            android:textSize="12sp"
            android:textColor="@color/login_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/terminosYCondiciones"
            app:layout_constraintVertical_bias="0.268" />

        <CheckBox
            android:id="@+id/checkBox"
            style="@style/TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quiero_estar_al_dia_sobre_crunchyroll_ofertas_y_nnoticias"
            app:layout_constraintBottom_toTopOf="@+id/terminosYCondiciones"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.253"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passwords"
            app:layout_constraintVertical_bias="0.466" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/Crear"
        android:layout_width="409dp"
        android:layout_height="56dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/yatienes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ya_tienes_una_cuenta_acceder"
            style="@style/TextView"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.513" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>